--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       16/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 160 points<br>
+Unlocked       17/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 162 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -23,6 +23,7 @@ Unlocked       16/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Hunter (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
+<li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotates a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -58,18 +59,18 @@ Unlocked       16/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-9443 status
-9105 symbolic-ref
- 167 commit
- 111 push
- 108 diff
- 104 add
-  43 remote
-  41 log
-  38 pull
-  27 clone
-  25 checkout
-  22 branch
+9628 status
+9279 symbolic-ref
+ 173 commit
+ 116 push
+ 111 diff
+ 106 add
+  47 remote
+  42 log
+  41 pull
+  29 clone
+  29 checkout
+  27 branch
   12 rm
   12 init
   10 reset
@@ -77,14 +78,14 @@ Git commands sorted by usage:
    7 bisect
    4 achievements
    3 reflog
+   3 merge
    3 config
    2 submodule
    2 mv
-   2 merge
    2 gl
+   2 blame
    1 rebase
    1 help
-   1 blame
    1 Tue
    1 Fri
 </pre>
@@ -115,7 +116,6 @@ There are       48 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Goldsmith</div><div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Homeowner</div><div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Inventor ($1)</div><div class="info">Used a command that isn't part of the built in Git command</div></li>
-<li><div class="title">Investigator</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotates a file with information about how each line changed.</div></li>
 <li><div class="title">Librarian</div><div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Locksmith</div><div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Messenger</div><div class="info">Applied a patch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-am.html">git-am</a>.</div></li>
