--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Mark Wotton's Git Achievements</h2>
-Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 233 points<br>
+Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 237 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -30,6 +30,7 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Hunter (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotates a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Investigator (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotates a file with information about how each line changed.</div></li>
+<li><div class="title">Apprentice Investigator (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotates a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -73,30 +74,30 @@ Unlocked       18/      48 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-16592 status
-15953 symbolic-ref
- 434 commit
- 297 diff
- 293 push
- 176 checkout
- 144 add
- 136 pull
- 103 remote
-  63 log
-  58 branch
-  55 clone
+18027 status
+17339 symbolic-ref
+ 471 commit
+ 307 diff
+ 304 push
+ 183 checkout
+ 151 add
+ 148 pull
+ 112 remote
+  66 log
+  61 branch
+  60 clone
   41 merge
+  22 rm
   20 reset
-  17 rm
+  19 config
   16 stash
   14 init
-  11 config
-   7 blame
+   8 blame
+   7 mv
    7 bisect
-   4 clean
+   6 clean
    4 achievements
    3 reflog
-   3 mv
    2 submodule
    2 gl
    2 Fri
